--- a/index.html
+++ b/index.html
@@ -10,36 +10,43 @@
 
 </head>
 <body>
-<!-- Vista splash -->
-<div id="splash">
-
-</div>
-
-<!-- Inicio de sesión/registro -->
-<main id="main" class="hide register valign-wrapper">
-  <div class="row" >
-    <form class="col s12 l12">
-      <div class="row">
-        <div class="input-field col s10 offset-s1 l10 offset-l1">
-          <i class="material-icons prefix">mail_outline</i>
-          <input id="user-email" type="email" class="validate">
-          <label for="user-email" data-error="Ingresa un correo válido" data-success="Correcto">Correo electrónico</label>
-        </div>
-        <div class="input-field col s10 offset-s1 l10 offset-l1">
-          <i class="material-icons prefix">lock_outline</i>
-          <input id="user-password" type="password" class="validate">
-          <label for="user-password" data-error="Ingresa de 4 a 8 caracteres" data-success="Correcto">Contraseña</label>
-        </div>
-        <div class="col s8 offset-s2 mt-2">
-          <a href="views/network.html"> <button type="button" name="button" id="btn-login">Iniciar sesión</button></a>
-        </div>
+  <!-- Vista splash -->
+  <div id="splash" class="valign-wrapper">
+    <div class="row ">
+      <div class="col s12">
+        <img src="assets/img/logo.png" alt="logo-healthy-food" class="responsive-img">
       </div>
-      <div class="col s8 offset-s2 mt-10">
-        <a href="views/signup.html"><button type="button" name="button" id="btn-signup">Crear cuenta</button></a>
-      </div>
-    </form>
+    </div>
   </div>
-</main>
+
+  <!-- Inicio de sesión/registro -->
+  <main id="main" class="hide register valign-wrapper">
+    <div class="row" >
+      <div class="col s12 center-align">
+        <img src="assets/img/logo-sin-fondo.png" alt="" class="responsive-img logo-form">
+      </div>
+      <form class="col s12 l12">
+        <div class="row">
+          <div class="input-field col s10 offset-s1 l10 offset-l1">
+            <i class="material-icons prefix">mail_outline</i>
+            <input id="user-email" type="email" class="validate">
+            <label for="user-email" data-error="Ingresa un correo válido" data-success="Correcto">Correo electrónico</label>
+          </div>
+          <div class="input-field col s10 offset-s1 l10 offset-l1">
+            <i class="material-icons prefix">lock_outline</i>
+            <input id="user-password" type="password" class="validate">
+            <label for="user-password" data-error="Ingresa de 4 a 8 caracteres" data-success="Correcto">Contraseña</label>
+          </div>
+          <div class="col s8 offset-s2 mt-2">
+            <a href="views/network.html"> <button type="button" name="button" id="btn-login">Iniciar sesión</button></a>
+          </div>
+        </div>
+        <div class="col s8 offset-s2 mt-10">
+          <a href="views/signup.html"><button type="button" name="button" id="btn-signup">Crear cuenta</button></a>
+        </div>
+      </form>
+    </div>
+  </main>
 
 
 
