agregando clase hide

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
 <!--Principal view-->
-  <div id="network-container" class="">
+  <div id="network-container" class="hide">
     <!-- Header-->
     <header class="header center-align">
       <div class="row">
