ajustando las imagenes post a su container

--- a/index.html
+++ b/index.html
@@ -70,12 +70,14 @@
           <div class="profile-photo">
           </div>
         </div>
-        <div class="input-field col s7">
+        <div class="input-field col s8">
           <textarea id="post-text" class="materialize-textarea" placeholder="¿En qué estás pensando?"></textarea>
         </div>
-        <div class="col s4">
-          <button type="button" name="button" id="btn-send-post"><i class="material-icons prefix">send</i></button>
-          <button type="button" name="button" id="btn-add-photo-post"><i class="material-icons prefix">add_a_photo</i></button>
+        <div class="row">
+          <div class="col s4">
+            <button type="button" name="button" id="btn-send-post"><i class="material-icons prefix">send</i></button>
+            <input type="file" id="files">
+          </div>
         </div>
       </div>
     </section>
@@ -83,9 +85,8 @@
 
 <!--imagenes-->
 
-<input type="file" id="files" name="files[]" />
-        <br />
-        <output id="list"></output>
+
+
 
 
 
