--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         </div>
         <div class="row">
           <div class="col s4">
-            <button type="button" name="button" id="btn-send-post"><i class="material-icons prefix">send</i></button>
             <input type="file" id="files">
+            <button type="button" name="button" id="btn-send-post btn-outline">Publicar</button>
           </div>
         </div>
       </div>
