--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
 
 <!--Principal view-->
   <div id="network-container" class="hide">
+
     <!-- Header-->
-    <header class="header center-align">
+    <header id="header" class="center-align">
       <div class="row">
         <div class="col s12">
           <img src="assets/img/logo-horizontal.png" alt="" class="responsive-img logo-header">
@@ -63,23 +64,37 @@
     </header>
 
 
-    <!-- Escribir post -->
-    <section class="">
-      <div class=" row card-panel hoverable valign-wrapper" id="write-post-section">
-        <div class="col s1">
-          <div class="profile-photo">
-          </div>
-        </div>
-        <div class="input-field col s8">
-          <textarea id="post-text" class="materialize-textarea" placeholder="¿En qué estás pensando?"></textarea>
-        </div>
-        <div class="row">
-          <div class="col s4">
-            <input type="file" id="files">
-            <button type="button" name="button" id="btn-send-post btn-outline">Publicar</button>
-          </div>
+    <!-- Header-->
+
+    <div id="greeting">
+      <div class="row">
+        <div class="col s12">
+          <p>HOLA</p>
         </div>
       </div>
+    </div>
+
+    <!-- Escribir post -->
+    <section class="card-panel hoverable valign-wrapper" id="write-post-section">
+
+        <div class=" row">
+          <div class="col s1">
+            <div class="profile-photo">
+            </div>
+          </div>
+          <div class="input-field col s10">
+            <textarea id="post-text" class="materialize-textarea" placeholder="¿En qué estás pensando?"></textarea>
+          </div>
+          <div class="row">
+            <div class="col s5 offset-s1">
+              <input type="file" id="files">
+            </div>
+            <div class="col s5">
+              <button type="button" name="button" id="btn-send-post">Publicar</button>
+            </div>
+          </div>
+        </div>
+
     </section>
 
 
@@ -91,7 +106,7 @@
 
 
     <!-- Newsfeed-->
-    <section>
+    <section id="newsfeed">
       <div class="row">
         <div class="col s12" id="show-post-section"></div>
       </div>
