--- a/index.html
+++ b/index.html
@@ -54,93 +54,24 @@
         </div>
 
 
+        <div class="input-field col s10 offset-s1 l10 offset-l1">
+          <i class="material-icons prefix">mail_outline</i>
+          <input id="signup-email" type="email" class="validate">
+          <label for="signup-email" data-error="Ingresa un correo válido" data-success="Correcto">Correo electrónico</label>
+        </div>
+        <div class="input-field col s10 offset-s1 l10 offset-l1">
+          <i class="material-icons prefix">lock_outline</i>
+          <input id="signup-password" type="password" class="validate">
+          <label for="signup-password" data-error="Ingresa de 4 a 8 caracteres" data-success="Correcto">Contraseña</label>
+        </div>
+        <div class="col s8 offset-s2 mt-2">
+          <button type="button" name="button" id="btn-signup-network">Registrarme</button>
+        </div>
+
+
       </div>
     </div>
   </main>
-
-
-<!--Principal view-->
-  <div id="network-container" class="hide">
-
-    <!-- Header-->
-    <header id="header" class="center-align">
-      <div class="row">
-        <div class="col s12">
-          <img src="assets/img/logo-horizontal.png" alt="" class="responsive-img logo-header">
-        </div>
-      </div>
-    </header>
-
-
-    <!-- Header-->
-
-    <div id="greeting">
-      <div class="row">
-        <div class="col s12">
-          <p>HOLA</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Escribir post -->
-    <section class="card-panel hoverable valign-wrapper" id="write-post-section">
-
-        <div class=" row">
-          <div class="col s1">
-            <div class="profile-photo">
-            </div>
-          </div>
-          <div class="input-field col s10">
-            <textarea id="post-text" class="materialize-textarea" placeholder="¿En qué estás pensando?"></textarea>
-          </div>
-          <div class="row">
-            <div class="col s5 offset-s1">
-              <input type="file" id="files">
-            </div>
-            <div class="col s5">
-              <button type="button" name="button" id="btn-send-post">Publicar</button>
-            </div>
-          </div>
-        </div>
-
-    </section>
-
-
-<!--imagenes-->
-
-
-
-
-
-
-    <!-- Newsfeed-->
-    <section id="newsfeed">
-      <div class="row">
-        <div class="col s12" id="show-post-section"></div>
-      </div>
-    </section>
-
-    <!-- Nav-->
-    <nav class="nav-bottom">
-      <div class="row">
-        <div class="col s12 center-align">
-          <div class="col s3">
-            <a href="views/network.html"><i class="material-icons prefix">home</i></a>
-          </div>
-          <div class="col s3">
-            <a href="views/network.html"><i class="material-icons prefix">comment</i></a>
-          </div>
-          <div class="col s3">
-            <a href="views/follow.html"><i class="material-icons prefix">person_add</i></a>
-          </div>
-          <div class="col s3">
-            <a href="views/profile.html"><i class="material-icons prefix">person</i></a>
-          </div>
-        </div>
-      </div>
-    </nav>
-
-  </div>
 
 
 
