--- a/index.html
+++ b/index.html
@@ -45,28 +45,16 @@
 
         </form>
 
-        <div class="col s8 offset-s2 mt-2">
-          <button type="button" name="button" id="btn-google" class="btn-outline">Iniciar con Google</button>
+        <div class="col s8 offset-s2 mt-2 center-align">
+          <button type="button" name="button" id="btn-google">
+            <img src="assets/img/btn-google.png" alt="">
+          </button>
         </div>
 
         <div class="col s8 offset-s2 mt-10">
           <a href="views/signup.html"><button type="button" name="button" id="btn-signup">Crear cuenta</button></a>
         </div>
 
-
-        <div class="input-field col s10 offset-s1 l10 offset-l1">
-          <i class="material-icons prefix">mail_outline</i>
-          <input id="signup-email" type="email" class="validate">
-          <label for="signup-email" data-error="Ingresa un correo válido" data-success="Correcto">Correo electrónico</label>
-        </div>
-        <div class="input-field col s10 offset-s1 l10 offset-l1">
-          <i class="material-icons prefix">lock_outline</i>
-          <input id="signup-password" type="password" class="validate">
-          <label for="signup-password" data-error="Ingresa de 4 a 8 caracteres" data-success="Correcto">Contraseña</label>
-        </div>
-        <div class="col s8 offset-s2 mt-2">
-          <button type="button" name="button" id="btn-signup-network">Registrarme</button>
-        </div>
 
 
       </div>
