agregando registros de nuevos usuarios

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </div>
 
   <!-- Inicio de sesión/registro -->
-  <main id="main" class="hide">
-    <div id="container-main" class=" valign-wrapper">
+  <main class="hide main" id="main">
+    <div class="container-main valign-wrapper">
       <div class="row background">
         <div class="col s12 center-align">
           <img src="assets/img/logo-sin-fondo.png" alt="" class="responsive-img logo-form">
@@ -42,16 +42,15 @@
               <button type="button" name="button" id="btn-mail-access" class="btn-outline">Entrar</button>
             </div>
           </div>
-
         </form>
-
-        <div class="col s8 offset-s2 mt-2 center-align">
+          <!-- Botón google -->
+        <div class="col s8 offset-s2 mt-7 center-align">
           <button type="button" name="button" id="btn-google">
             <img src="assets/img/btn-google.png" alt="">
           </button>
         </div>
-
-        <div class="col s8 offset-s2 mt-10">
+          <!-- Botón crear cuenta-->
+        <div class="col s8 offset-s2 mt-2">
           <a href="views/signup.html"><button type="button" name="button" id="btn-signup">Crear cuenta</button></a>
         </div>
 
